Added packet filtering based on user-defined criteria

--- a/config/system_config.yaml
+++ b/config/system_config.yaml
@@ -2,3 +2,10 @@
 
 network_interface: "eth0"
 log_file_path: "data/logs/system.log"
+
+filter:
+  source_ip: ""
+  destination_ip: ""
+  protocol: ""
+  port: ""
+  bpf: ""  # Example: "tcp and port 80"
