Implemented automated incident response for detected anomalies

--- a/config/system_config.yaml
+++ b/config/system_config.yaml
@@ -9,3 +9,6 @@ filter:
   protocol: ""
   port: ""
   bpf: ""  # Example: "tcp and port 80"
+
+incident_response:
+  HighPacketSizeDetected: "sh -c 'echo \"High packet size detected\" | mail -s \"Network Alert\" admin@example.com'"
